# tap-purecloud

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
tap_purecloud/: __init__.py  __main__.py  client.py  schemas.py  streams.py  tap.py
